# blescope

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
blescope/: __init__.py  __main__.py  active.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  frontdoor_lock.json
demos/02-clean/: SCENARIO.md  secure_hrm.json
demos/03-mixed/: SCENARIO.md  smart_plug.json
demos/04-debug-keys/: SCENARIO.md  smartbulb_debugkey.json
demos/05-fitness-legacy/: SCENARIO.md  fitband_legacy.json
demos/06-hid-keyboard/: SCENARIO.md  ble_keyboard.json
demos/07-no-smp-sensor/: SCENARIO.md  warehouse_sensor.json
demos/08-beacon-open/: SCENARIO.md  eddystone_beacon.json
demos/09-secure-lock/: SCENARIO.md  secure_deadbolt.json
demos/10-text-relay/: SCENARIO.md  garage_relay.capture.txt
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  index.test.js  package.json
ports/perl/: blescope.pl  blescope.t
ports/ruby/: blescope.rb  test_blescope.rb
ports/rust/: Cargo.toml
ports/shell/: blescope.awk  blescope.sh  test_blescope.sh
ports/typescript/: blescope.test.ts  cli.ts  (+3 more)
tests/: test_active.py  test_connect.py  test_core_engine.py  test_hardening.py  test_ports_parity.py  test_rules_deep.py  test_sarif_and_demos.py  test_smoke.py
(+2 files in other folders)
